@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 1.1:
+  ADD: Support for redirected streams and streams with no specified port.
   ADD: KIO support for GStreamer engine. Allows playing media via all
        protocols supported by KIO (ftp, audiocd, fish, etc). 
   ADD: SearchBrowser operation can now be aborted.
